# test_school

./: alembic.ini  pyproject.toml
app/: main.py  schemas.py
app/backend/: db.py
app/models/: product.py  user.py
app/routers/: products.py  users.py
app/services/: products_service.py  users_service.py
